<resources>
    <string name="app_name">Bakis</string>
    <string name="start">Sākt</string>
    <string name="start_ex">Sākt uzdevumu</string>
    <string name="next">Tālāk</string>
    <string name="next_question">Nākamais elements</string>
    <string name="next_task">Nākamais uzdevums</string>

    
    //ELEMENT STRINGS//
    <string name="start_text">
        Pētījumā redzēsiet dažādus saskarnes elementu piemērus, kā arī uzdevumus,
        kuros nepieciešams izpildīt kādu darbību.
        Pēc elementa aplūkošanas vai darbības izpildīšanas atzīmējat,
        lūdzu, kura no piedāvātajām atbildēm Jūsuprāt ir visatbilstošākā.</string>

    <string name="elements_noedit">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <string name="elements_2">
        Lorem ipsum dolor sit amet, <b>consectetur adipiscing elit</b>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        <b>Duis aute irure dolor</b> in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <string name="elements_3">
        <i>Lorem ipsum dolor sit amet</i>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation <i>ullamco laboris nisi ut aliquip</i> ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    <string name="elements_6_title">
        Lorem ipsum</string>

    <string name="elements_6_1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="elements_6_2">
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

    //NAV STRINGS//
    <string name="nav_uzd_1">Izvēlies pogu, kas navigē uz nākamo rakstu.</string>
    <string name="nav_uzd_2">Navigē uz lietotāja profila skatu.</string>
    <string name="nav_uzd_3">Navigē uz nākamā raksta skatu.</string>


    //ELEMENT CATEGORY//
    <string name="e_cat">Cik viegli uztverams bija elements, ko tikko aplūkojāt?</string>
    ----------------------------------------------
    <string name="e1_cat">Pilnībā uztverams</string>
    <string name="e2_cat">Drīzāk uztverams</string>
    <string name="e3_cat">Neesmu pārlicināta/s</string>
    <string name="e4_cat">Drīzāk neuztverams</string>
    <string name="e5_cat">Pilnībā neuztverams</string>

    <string name="e1_q">Vai teksta burtu izmērs ir pietiekams vieglai uztverei?</string>
    ----------------------------------------------
    <string name="e1_a1">Pilnībā pietiekams</string>
    <string name="e1_a2">Drīzāk pietiekams</string>
    <string name="e1_a3">Neesmu pārlicināta/s</string>
    <string name="e1_a4">Drīzāk nepieteikams</string>
    <string name="e1_a5">Pilnībā nepietiekams</string>

    <string name="e2_q">Vai tekstā bija saprotams, kuriem vārdiem ir paredzēts būt uzsvērtiem?</string>
    <string name="e3_q">Vai tekstā bija saprotams, kurai frāzei ir paredzēts būt uzsvērtai?</string>
    ----------------------------------------------
    <string name="e2_e3_a1">Pilnībā saprotams</string>
    <string name="e2_e3_a2">Drīzāk saprotams</string>
    <string name="e2_e3_a3">Neesmu pārlicināta/s</string>
    <string name="e2_e3_a4">Drīzāk nesaprotams</string>
    <string name="e2_e3_a5">Pilnībā nesaprotams</string>

    <string name="e4_q">Vai teksta fonts sarežģīja/ atviegloja teksta lasīšanu?</string>
    <string name="e5_q">Vai attālums starp rindām sarežģīja/ atviegloja teksta lasīšanu?</string>
    ----------------------------------------------
    <string name="e4_e5_a1">Sarežģīja lasīšanu</string>
    <string name="e4_e5_a2">Drīzāk sarežģīja lasīšanu</string>
    <string name="e4_e5_a3">Neesmu pārlicināta/s</string>
    <string name="e4_e5_a4">Drīzāk nesarežģīja lasīšanu</string>
    <string name="e4_e5_a5">Nesarežģīja lasīšanu</string>

    <string name="e6_q">Vai elementu tuvums/ attālums vienam no otra ir apmierinošs?</string>
    ----------------------------------------------
    <string name="e6_a1">Pilnībā apmierinošs</string>
    <string name="e6_a2">Drīzāk apmierinošs</string>
    <string name="e6_a3">Neesmu pārlicināta/s</string>
    <string name="e6_a4">Drīzāk neapmierinošs</string>
    <string name="e6_a5">Pilnībā neapmierinošs</string>

    //NAVIGATION CATEGORY//
    <string name="n_cat">Cik uztverama ir navigācija uzdevumam, ko tikko izpildījāt?</string>
    ----------------------------------------------
    <string name="n1_h1_cat">Pilnībā uztverama</string>
    <string name="n2_h2_cat">Drīzāk uztverama</string>
    <string name="n3_h3_cat">Neesmu pārlicināta/s</string>
    <string name="n4_h4_cat">Drīzāk neuztverama</string>
    <string name="n5_h5_cat">Pilnībā neuztverama</string>

    <string name="n1_q">Vai bija viegli atrast pareizo navigācijas pogu?</string>
    ----------------------------------------------
    <string name="n1_a1">Atrast bija viegli</string>
    <string name="n1_a2">Atrast bija drīzāk viegli</string>
    <string name="n1_a3">Neesmu pārlicināta/s</string>
    <string name="n1_a4">Atrast bija drīzāk grūti</string>
    <string name="n1_a5">Atrast bija grūti</string>

    <string name="n2_n3_q">Vai bija viegli navigēt uz pareizo skatu?</string>
    ----------------------------------------------
    <string name="n2_n3_a1">Navigēt bija viegli</string>
    <string name="n2_n3_a2">Navigēt bija drīzāk viegli</string>
    <string name="n2_n3_a3">Neesmu pārlicināta/s</string>
    <string name="n2_n3_a4">Navigēt bija drīzāk grūti</string>
    <string name="n2_n3_a5">Navigēt bija grūti</string>

    //HAPTIC CATEGORY//
    <string name="h_cat">Cik uztverama ir lietotnes atbildes reakcija uz darbību uzdevumam, ko tikko izpildījāt?</string>
    //same answer as "n_cat"

    <string name="h_q">Vai lietotnes atbildes reakcija uz darbību uzdevumam ir pietiekama?</string>
    ----------------------------------------------
    <string name="h_a1">Bija pietiekama</string>
    <string name="h_a2">Drīzāk pietiekama</string>
    <string name="h_a3">Neesmu pārlicināta/s</string>
    <string name="h_a4">Drīzāk nepietiekama</string>
    <string name="h_a5">Bija nepietiekama</string>

    <string name="lucu">Lūdzu izvēlieties kādu no atbildēm!</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="vizu_l_s_uztveres_tests">Vizuālās uztveres tests</string>
    <string name="sakt_testu">Sākt testu</string>
    <string name="lorem">Lorem</string>
    <string name="ipsum">Ipsum</string>
    <string name="image_of_roman_dude">Image of Roman dude</string>
    <string name="ni_text">Lai atvērtu kameras, mūzikas vai lietotāja profilu, spied uz ikonām, kas atrodas navigācijas joslā!</string>
    <string name="ni_title">Esi sveicināts lietotnes sākumskatā!</string>
    <string name="ni_profile">Mans profils</string>
    <string name="ni_music">Mūzika</string>
    <string name="ni_camera">Kamera</string>
    <string name="s_kums">Sākums</string>
    <string name="fab_ns">Next article</string>
    <string name="uzdevums">Uzdevums</string>
    <string name="spiest">Spiest</string>

</resources>